# sigmiot

./: .gitignore  Cargo.toml  sdkconfig.defaults  ws_proto_test.py  ws_send_receive.py
protos/: .gitignore  sensors_data.proto  sigmiot_data.proto
sigmiot-esp32/: Cargo.toml  build.rs
sigmiot-esp32/.cargo/: config.toml
sigmiot-esp32/src/: data_channel.rs  data_transfer.rs  httpd.rs  main.rs  sensors.rs  sigmiot_log.rs  spawn.rs  wifi.rs  ws.rs
sigmiot-pc/: Cargo.toml  README.md  build.rs
sigmiot-pc/src/: main.rs
src/: data_provider.rs  data_transfer.rs  main.rs  sensors.rs  spawn.rs  wifi.rs  ws.rs
