[package]
name = "sigmiot"
version = "0.1.0"
authors = ["Sergey Dubyna <sergey.dubyna@sigma.software>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.11", features = ["binstart"] }
esp-idf-hal = "0.37.4"
esp-idf-svc = "0.42.0"

[build-dependencies]
embuild = "0.30.4"
