[package]
name = "sigmiot"
version = "0.1.0"
authors = ["Sergey Dubyna <sergey.dubyna@sigma.software>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["experimental"]
pio = ["esp-idf-sys/pio"]
experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
esp-idf-sys = { version = "0.32.1", features = ["binstart", "panic_handler", "alloc_handler"] }
esp-idf-hal = "0.40.1"
esp-idf-svc = "0.45.0"
embedded-svc = "0.24.0"
embedded-hal = "0.2"
bme280 = { version = "0.3.0", features = ["serde"] }
shared-bus = "0.2.5"

[build-dependencies]
embuild = "0.31.0"
anyhow = "1"
