[package]
name = "sigmiot"
version = "0.1.0"
authors = ["Sergey Dubyna <sergey.dubyna@sigma.software>"]
edition = "2021"
categories = ["embedded", "hardware-support", "network-programming"]
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["experimental"]
pio = ["esp-idf-sys/pio"]
experimental = ["embedded-svc/experimental"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
esp-idf-sys = { version = "0.32.1", features = ["binstart", "panic_handler", "alloc_handler"] }
esp-idf-hal = { version = "0.40.1", features = [ "embassy-sync", "edge-executor", "critical-section" ] }
esp-idf-svc = { version = "0.45.0", features = [
    "nightly",
    "experimental",
    "embassy-time-driver",
    "embassy-time-isr-queue",
    "alloc",
] }

embedded-svc = { version = "0.24.0", features = ["nightly", "experimental"] }

embassy-sync = { version = "0.1.0", features = ["std"] }
embassy-futures = "0.1.0"
embassy-time = "0.1"

embedded-hal = "0.2"
bme280 = { version = "0.3.0", features = ["serde"] }
shared-bus = { version = "0.2.5", features = ["std"] }

heapless = "0.7.16"
log ={ version = "0.4.17"}

protobuf = "3.2.0"

"lazy_static" = "1.4.0"

[build-dependencies]
embuild = "0.31.1"
anyhow = "1"
protobuf-codegen = "3.2.0"
