[package]
name = "sigmiot-pc"
version = "0.1.0"
authors = ["serj"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
futures-channel = { version = "0.3.28", default-features = false, features = ["std"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
url = "2.3.1"
protobuf = "3"
termion = "2.0.1"
tui = { version = "0.19.0", default-features = false, features = ["termion"] }
log = "0.4.17"
simplelog = "0.12.1"

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"
